--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
             <div class="main">
                 <div class="video-utama">
-                    <!-- <div class="react-reveal" style="opacity: 1;">
+                    <div class="react-reveal" style="opacity: 1;">
                         <div class="sc-bdnxRM iyrYRc" style="background-image: url(&quot;undefined&quot;);">
                             <link rel="preload" href="https://i.ytimg.com/vi/_3uPoHK0XZk/maxresdefault.jpg" as="image">
                             <link rel="preconnect" href="https://www.youtube-nocookie.com">
@@ -108,9 +108,9 @@
                         </div>
                     </div>
                     <h2 class="react-reveal ppsmb-yellow" style="opacity: 1;">Apa Itu PPSMB UGM?</h2>
-                    <p class="react-reveal" style="opacity: 1;">Yuk, kenali lebih dalam tentang PPSMB UGM!</p> -->
+                    <p class="react-reveal" style="opacity: 1;">Yuk, kenali lebih dalam tentang PPSMB UGM!</p>
                 </div>
-                <!-- <div class="daftar-video">
+                <div class="daftar-video">
                     <div class="react-reveal"
                         style="animation-fill-mode: both; animation-duration: 1000ms; animation-delay: 0ms; animation-iteration-count: 1; opacity: 1; animation-name: react-reveal-912258606078195-10;">
                         <div class="sc-jrsJWt dJdFwe">
@@ -132,7 +132,7 @@
                             </div>
                         </div>
                     </div>
-                </div> -->
+                </div>
             </div>
             <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="788.54" height="443"
                 type="text/html"
