--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             <link rel="preload" href="https://i.ytimg.com/vi/_3uPoHK0XZk/maxresdefault.jpg" as="image">
                             <link rel="preconnect" href="https://www.youtube-nocookie.com">
                             <link rel="preconnect" href="https://www.google.com">
-                            <div class="yt-lite false" data-title="Apa Itu PPSMB UGM?"
+                            <div class="yt-lite false" data-title="Apa Itu PBAK UIN RMS 2021?"
                                 style="background-image: url(&quot;https://i.ytimg.com/vi/_3uPoHK0XZk/maxresdefault.jpg&quot;);">
                                 ::before
                                 <div class="lty-playbtn">
@@ -102,23 +102,23 @@
                             </div>
                             <div class="title-decoration undefined">
                                 <div class="title-text">
-                                    <h3>Apa Itu PPSMB UGM?</h3>
+                                    <h3>Apa Itu PBAK UIN RMS 2021?</h3>
                                 </div><img src="/2021/static/media/title-decoration.608dfeb1.svg" alt="">
                             </div>
                         </div>
                     </div>
-                    <h2 class="react-reveal ppsmb-yellow" style="opacity: 1;">Apa Itu PPSMB UGM?</h2>
-                    <p class="react-reveal" style="opacity: 1;">Yuk, kenali lebih dalam tentang PPSMB UGM!</p>
+                    <h2 class="react-reveal ppsmb-yellow" style="opacity: 1;">Apa Itu PBAK UIN RMS 2021?</h2>
+                    <p class="react-reveal" style="opacity: 1;">Yuk, kenali lebih dalam tentang PBAK UIN RMS 2021!</p>
                 </div>
                 <div class="daftar-video">
                     <div class="react-reveal"
                         style="animation-fill-mode: both; animation-duration: 1000ms; animation-delay: 0ms; animation-iteration-count: 1; opacity: 1; animation-name: react-reveal-912258606078195-10;">
                         <div class="sc-jrsJWt dJdFwe">
-                            <img src="/2021/static/media/apaituppsmb.242cdd40.webp" alt="Apa Itu PPSMB UGM? thumbnail"
+                            <img src="/2021/static/media/apaituppsmb.242cdd40.webp" alt="Apa Itu PBAK UIN RMS 2021? thumbnail"
                                 class="unselectable">
                             <div style="overflow: hidden;">
-                                <p class="title" data-toggle="collapse" aria-expanded="true">Apa Itu PPSMB UGM?</p>
-                                <p>Yuk, kenali lebih dalam tentang PPSMB UGM!</p>
+                                <p class="title" data-toggle="collapse" aria-expanded="true">Apa Itu PBAK UIN RMS 2021?</p>
+                                <p>Yuk, kenali lebih dalam tentang PBAK UIN RMS 2021!</p>
                             </div>
                         </div>
                     </div>
@@ -128,7 +128,7 @@
                                 alt="Tarian Selebrasi thumbnail" class="unselectable">
                             <div style="overflow: hidden;">
                                 <p class="title" data-toggle="collapse" aria-expanded="true">Tarian Selebrasi</p>
-                                <p>Rasakan euforia PPSMB UGM 2021 melalui tarian selebrasi!</p>
+                                <p>Rasakan euforia PBAK UIN RMS 2021 2021 melalui tarian selebrasi!</p>
                             </div>
                         </div>
                     </div>
@@ -183,7 +183,7 @@
                         <li> <em>Action plan</em> merupakan rangkaian PPSMB sebagai implementasi nilai-nilai
                             UGM dan menjadi salah satu syarat kelulusan PPSMB.</li>
                         <li>Setiap mahasiswa baru Program Sarjana dan Sarjana Terapan yang telah melaksanakan
-                            registrasi, secara otomatis terdaftar untuk mengikuti kegiatan PPSMB UGM
+                            registrasi, secara otomatis terdaftar untuk mengikuti kegiatan PBAK UIN RMS 2021
                             2020 (tanpa melakukan pengisian data atau formulir apapun).</li>
                         <li>Dalam rangka perlindungan mahasiswa baru, setiap peserta wajib untuk tidak
                             mengindahkan dan menolak segala macam pengumuman baik itu terkait pelaksanaan,
@@ -191,15 +191,15 @@
                             nomor kontak, dsb); selain yang merujuk pada laman <a href="https://um.ugm.ac.id">Sistem
                                 Ujian Masuk UGM</a>,
                             <a href="https://simaster.ugm.ac.id">SIMASTER UGM</a>, dan/atau laman <a
-                                href="https://ppsmb.ugm.ac.id/2020">PPSMB UGM 2020</a>.
+                                href="https://ppsmb.ugm.ac.id/2020">PBAK UIN RMS 2021 2020</a>.
                         </li>
-                        <li>Seluruh informasi yang tertera pada laman dan media resmi PPSMB UGM 2020
+                        <li>Seluruh informasi yang tertera pada laman dan media resmi PBAK UIN RMS 2021 2020
                             harap dicermati sepenuhnya.</li>
                         <li>Informasi gugus dan kelompok fakultas/sekolah vokasi dapat dilihat melalui
                             <a href="https://simaster.ugm.ac.id">SIMASTER UGM</a>&nbsp;(per 6 September 2020 pukul 08.00
                             WIB).
                         </li>
-                        <li>Upacara Penutupan PPSMB UGM 2020 akan disiarkan secara langsung di kanal
+                        <li>Upacara Penutupan PBAK UIN RMS 2021 2020 akan disiarkan secara langsung di kanal
                             <a href="http://ugm.id/youtube">Youtube UGM Yogyakarta</a>&nbsp; pada tanggal 4 Oktober 2020
                             pukul 15.00
                             WIB.
@@ -207,7 +207,7 @@
                         <li>Demi ketertiban, keamanan, dan keselamatan bersama, tidak diperkenankan
                             melaksanan/mengikuti kegiatan atau pengumpulan mahasiswa dalam bentuk apapun
                             mengatasnamakan institusi/organisasi apapun di luar waktu yang telah ditetapkan
-                            baik sebelum maupun selama masa PPSMB UGM 2020.</li>
+                            baik sebelum maupun selama masa PBAK UIN RMS 2021 2020.</li>
                     </ol>
                     </p>
                 </div>
